Sat May  7 20:12:12 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp
	  (is_typecode_generation_required):

	  Include NT_{interface_fwd,valuetype,valuetype_fwd} node types
	  when deciding whether a TypeCode should be generated.  Fixes
	  duplicate valuetype TypeCode definition errors.

Sat May  7 10:33:21 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
	* TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
	* TAO_IDL/be_include/be_visitor_typecode/struct_typecode.h:
	* TAO_IDL/be_include/be_visitor_typecode/typecode_defn.h:
	* TAO_IDL/be_include/be_visitor_typecode/union_typecode.h:
	* TAO_IDL/be_include/be_visitor_typecode/value_typecode.h:

	  Fixed duplicate generation of TypeCodes.

	  Fixed false positives in recursive type detection.

Sat May  7 11:13:12 UTC  2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/Persistence_Test/svc.conf:
          Set -ORBDropRepliesOnShutdown to 0

Fri May  6 18:28:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp:

	  Generate include directive for "tao/Recursive_Type_TypeCode.h"
	  if any struct, union or valuetype is seen.

	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
	* TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
	* TAO_IDL/be_include/be_visitor_typecode/struct_typecode.h:
	* TAO_IDL/be_include/be_visitor_typecode/typecode_defn.h:
	* TAO_IDL/be_include/be_visitor_typecode/union_typecode.h:
	* TAO_IDL/be_include/be_visitor_typecode/value_typecode.h:

	  Added recursive type TypeCode support.

	* TAO_IDL/include/idl_global.h:
	* TAO_IDL/util/utl_global.cpp:

	  Added new "recursive_type_seen_" flag for use in determining